[package]
name = "sauron-markdown"
version = "0.40.2"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing markdown into sauron node"
repository = "https://github.com/ivanceras/sauron-markdown"
documentation = "https://docs.rs/sauron-markdown"
keywords = ["md", "sauron", "node"]

[dependencies]
sauron = { version = "0.40" }
pulldown-cmark = { version = "0.8"}
ammonia = "3"

[dev-dependencies]
svgbob = "0.5.5"


#[patch.crates-io]
#sauron = {version = "0.40.0", path = "../sauron"}
