[package]
name = "sauron-markdown"
version = "0.43.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing markdown into sauron node"
repository = "https://github.com/ivanceras/sauron-markdown"
documentation = "https://docs.rs/sauron-markdown"
keywords = ["md", "sauron", "node"]

[dependencies]
#sauron = { version = "0.43", default-features = false, features = ["with-node-macro"] }
sauron = { version = "0.43.9", path = "../sauron" }
pulldown-cmark = { version = "0.8"}
ammonia = "3"
html5ever = {version = "0.25"}
markup5ever_rcdom = { version = "0.1" }
thiserror = "1.0"
log = "0.4"
once_cell = "1.8"

[dev-dependencies]
svgbob = "0.6"


[patch.crates-io]
#sauron = { version = "0.40", git = "https://github.com/ivanceras/sauron.git", branch = "develop" }
#svgbob = { git = "https://github.com/ivanceras/svgbob.git", branch = "master" }
