[package]
name = "sauron-markdown"
version = "0.45.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing markdown into sauron node"
repository = "https://github.com/ivanceras/sauron-markdown"
documentation = "https://docs.rs/sauron-markdown"
keywords = ["md", "sauron", "node"]

[dependencies]
#sauron = { version = "0.49.2", features = ["with-lookup"] }
sauron = { path = "../sauron", features = ["with-lookup"] }
pulldown-cmark = { version = "0.8"}
thiserror = "1.0"
log = "0.4"
once_cell = "1.8"
html-escape = "0.2.9"
rphtml = "0.5.5"

[features]
default = ["parse-html"]
parse-html = []

[dev-dependencies]
svgbob = "0.6"


[patch.crates-io]
#sauron = { version = "0.40", git = "https://github.com/ivanceras/sauron.git", branch = "develop" }
#svgbob = { git = "https://github.com/ivanceras/svgbob.git", branch = "master" }
